--- a/dsmixtures.tex
+++ b/dsmixtures.tex
@@ -66,7 +66,7 @@
 %  the examples below in creating your author and affiliation information.
 %  Also consult a recent issue of the journal for examples of formatting.
 
-\title[Distance sampling mixture models]{Mixture models for distance sampling detection functions}
+\title[Mixture model detection functions]{Mixture models for distance sampling detection functions}
 
 %  Here are examples of different configurations of author/affiliation
 %  displays.  According to the Biometrics style, in some instances,
@@ -236,9 +236,9 @@ Standard distance sampling methods (Buckland et al. 2001, 2004) use the ``key fu
 
 One problem with constraining the detection function to be monotonic is that the constraints can only be applied at a finite number of points. This can lead to constraints missing the non-monotonic points in the function. A typical example of this is shown in figure [[humpback figure from Williams and Thomas TKTKTK]]. Here a half-normal detection function was fit with one second order cosine adjustment term. Given that even with constraints it is not guaranteed that the resulting function can be non-monotone, it would seem preferable to use a formulation that guarantees monotonicity from the outset.
 
-[[TKTKTK humpback figure here cite the W+T paper]]
+[[TKTKTK humpback figure here cite the W+T paper \textbf{LEN}: do you have a high res version of this figure?]]
 
-Mixture models have recently become very popular in the capture-recapture literature following the work of TKTKTK Morgan, Pledger Royle etc. In distance sampling there is not the problem of bias due to unmodelled heterogeneity (TKTKTK cite), however it is interesting to use a flexible model for the detection function that doesn't have the disadvantages of the key function with adjustment terms formulation. If the individual parts of the mixture model (the mixture components) are each monotonic decreasing then a sum of these functions will also be monotonic decreasing. Such an approach is appealing since each function is simple but the combinations yield a great many possible shapes (see [[TKTKTK detection function plot for the simulations).
+Mixture models have recently become very popular in the capture-recapture literature following the work of Pledger (2000), Dorazio and Royle (), Pledger (2005) and Morgan \& Ridout (2008). In distance sampling there is not the problem of bias due to unmodelled heterogeneity (TKTKTK cite), however it is interesting to use a flexible model for the detection function that doesn't have the disadvantages of the key function with adjustment terms formulation. If the individual parts of the mixture model (the mixture components) are each monotonic decreasing then a sum of these functions will also be monotonic decreasing. Such an approach is appealing since each function is simple but the combinations yield a great many possible shapes (see [[TKTKTK detection function plot for the simulations).
 
 In this paper, we introduce a new class of detection function models, based on mixtures of simple parametric key functions.  In the next section, we describe the models.  We then illustrate their use by applying them to simulated data, and then to real data from a number of studies.  We compare results of CDS and mixture model detection functions.  We finish with a discussion of the utility of these new methods.
 
@@ -280,10 +280,10 @@ Finding the effective strip width is simply a case of integrating the detection 
 where $w$ is the truncation distance. In the non-covariate case we note that $\mu_i=\mu \quad \forall i$ but again keep to the covariate notation for generality.
 
 Analogously to conventional distance sampling we use a Horvitz-Thompson-type estimator of abundance, which can be found by simply substituting in the appropriate terms:
-\begin{align}
+\begin{align*}
 N &= \sum_{i=1}^n \frac{1}{p_i},\\
-&= \sum_{i=1}^n \frac{w}{\mu_i},\\
-\end{align}
+&= \sum_{i=1}^n \frac{w}{\mu_i},
+\end{align*}
 where $p_i$ is the average detectability of observation $i$, given as $\mu_i/w$.
 
 \subsection{Point transects}
@@ -298,6 +298,11 @@ and, then a Horvitz-Thompson estimator of the abundance is:
 \begin{equation*}
 N = \sum_{i=1}^n \frac{\pi w^2}{\nu_i}.
 \end{equation*}
+
+\subsection{Variance of $\hat{N}$}
+
+We can also find the variance of $\hat{N}$ using the sandwich estimator:
+
 
 
 \section{Finite mixture model likelihoods}
@@ -334,7 +339,7 @@ l(\bm{\theta}, \bm{\phi}; \mathbf{r},\mathbf{Z}) = n \log 2 \pi + \sum_{i=1}^n \
 \section{Optimization}
 \label{s:optimization}
 
-As noted in the literature [[TKTKTK cite]], mixture model likelihoods can be notoriously multimodal. This can cause serious problems when finding MLEs of the parameters. Here simulated annealing was used to explore the parameter space (for 500 iterations) then after that BFGS was used to find the maxima (the implementations in the \textsf{R} function \texttt{optim()} were used). These two steps were run 5 times. This two step approach appears to be satisfactory in most cases. The EM algorithm [[TKTKTK cite]] was also used although there was no significant performance increase (in terms of number of iterations to the maxima or parameter precision) over the other method [[TKTKTK better double check that]]. To aid the optimization, analytic derivatives were also found; these can be found in appendix A.
+As noted in the literature [[TKTKTK cite Gelman \textit{et al.} (2004), \ldots]], mixture model likelihoods can be notoriously multimodal. This can cause serious problems when finding MLEs of the parameters. Here simulated annealing was used to explore the parameter space (for 500 iterations) then after that BFGS was used to find the maxima (the implementations in the \textsf{R} function \texttt{optim()} were used). These two steps were run 5 times. This two step approach appears to be satisfactory in most cases. The EM algorithm [[TKTKTK cite]] was also used although there was no significant performance increase (in terms of number of iterations to the maxima or parameter precision) over the other method [[TKTKTK better double check that]]. To aid the optimization, analytic derivatives were also found; these can be found in appendix A.
 
 \subsection{Starting values}
 Beavers and Ramsay (1998) give a method for estimating starting values for the scale parameter of a half-Normal detection function. In the non-covariate case, the estimate is given as the intercept parameter from intercept only regression on $\log(x+\frac{w}{1000})$ (where $w$ denotes the truncation distance, as above). For covariate models, the equation used for the $\sigma$ is used in the regression and the estimated parameters from the linear regression are used as the starting values for the $\beta$s.
@@ -369,8 +374,8 @@ Extensive simulations were carried out to ensure that both parameters could be r
 
 Four sets of simulations were run:
 \begin{enumerate}
-	\item Non-covariate 2-point detection functions for line transect data: Four different detection functions were tested. They are shown in figure [[TKTKTK figure]]]. the first two functions are deliberately fairly easy to fit. The third should be harder, testing the behaviour of the model when one of the parameters is non-identifiable (it is not clear what the larger parameter would be, it could be very large). Finally, the fourth detection function has a large spike, which is similar to that in some of the data we analyse in section \ref{s:data}.
-	\item Non-covariate 2-point detection functions for point transect data: TKTKTK as above, but using point transects. Show the PDFs in fig, see below.
+	\item Non-covariate 2-point detection functions for line transect data: Four different detection functions were tested. They are shown in the first row of figure \ref{sim-detfcts}. the first two functions are deliberately fairly easy to fit. The third should be harder, testing the behaviour of the model when one of the parameters is non-identifiable (it is not clear what the larger parameter would be, it could be very large). Finally, the fourth detection function has a large spike, which is similar to that in some of the data we analyse in section \ref{s:data}.
+	\item Non-covariate 2-point detection functions for point transect data:  the detection functions were as above, with data generated as if it came from point transects. The pdfs are given in the second row of figure \ref{sim-detfcts}.
 	\item Non-covariate 3-point detection functions for line transect data
 	\item Covariate 2-point detection functions for line transect data
 \end{enumerate}
@@ -382,20 +387,30 @@ Four sets of simulations were run:
 2 3-point plots
 2  covariate detection functions x2 (composite and quantile plots)
 
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{figs/lt-sim-detfcts.eps}\\
+\includegraphics[width=\textwidth]{figs/pt-sim-detfcts.eps}
+\caption{Plots of the models used in the simulation. Top row: detection functions for the line transect simulations with no covariates. Second row: pdfs for the point transect simulations with no covariates, the detection functions are as in the top row.}
+\label{sim-detfcts}
+\end{figure}
+
+
+
 
 \section{Real data}
 \label{s:data}
 
 [[TKTKTK all of the model selection was by AIC; \texttt{mmds}; ]]
 
-\textbf{LEN}: can you check and/or add to the intro bits to these?
+\textbf{LEN}: can you check and/or add to the intro bits of these?
 
 \subsection{Williams and Thomas (2007) cetacean survey}
 
 Williams and Thomas (2007) study several species of cetaceans off the coast of British Columbia. In particular look at the data for three species: Dall's porpoise, harbour porpoise and humpback whale. Results are summarised in table \ref{williams-table} and detection functions for the best (in an AIC sense) models are shown in figure \ref{williams-detfcts}.
 
 \begin{table}
-\caption{Comparison of the results for the Williams and Thomas (2007) data. W\&T indicates the results reported in Williams and Thomas (2007), other results are from mixture models where the number of mixture components was selected by AIC. [[TKTKTK AICs for the other W\&T models!!!]]}
+\caption{Comparison of the results for the Williams and Thomas (2007) data. W\&T indicates the results reported in Williams and Thomas (2007), other results are from mixture models where the number of mixture components was selected by AIC. [[TKTKTK \textbf{LEN}: can you find the AICs for the other W\&T models?]]}
 \centering
 \begin{tabular}{c c c c c c c}
 Species & Model & Truncation & AIC & $\hat{P_a}$ & $\% CV \hat{P_a}$ & K-S $p$\\
@@ -405,19 +420,24 @@ Dall's porpoise & 1-point Hn (W\&T) & 700 &  & 0.535 & 7.74 & 0.19\\
  & 2-point & 700 & 1296.573 & 0.699 & 24.8 & 0.69\\
 Harbour porpoise & Hr (W\&T) & 500 & 690.66 & 0.212 & 32.0 & 0.99\\
  & 2-point & 500 & 692.09 & 0.254 & 17.5 & 0.99\\
-Humpback & hn+cos(2) (W\&T) & 2000 & & 0.386 & 12.64 & 0.6716 \\
+Humpback & hn+cos(2) (W\&T) & 2000 & 1033.06 & 0.386 & 12.64 & 0.6716 \\
  & 2-point & 2000 & 1035.94 & 0.381 & 15.6 & 0.649 \\
 \end{tabular}
 \label{williams-table}
 \end{table}
 
+[[\textbf{LEN}: need to sort out what to say about the Dall's porpoise... The model in the paper wasn't best? responsive movement, p. 25 Williams and Thomas (2007)]]
+
+In each case a 2-point mixture was selected by AIC to be the best model. The mixture models for the harbour porpoise and the humpback both did not perform as well as the models selected in Williams and Thomas (2007). However, for the harbour porpoise the AIC is only different by 2, the detectability is very similar and the \%CV is lower, so it does not appear that much is lost by using the mixture model. In the case of the humpback, the fitted detection function is monotone, which was not the case in Williams and Thomas (2007); this added to the fact that there is again not a huge difference in results, leads us to believe that mixture models for the detection function can be useful.
+
+[[TKTKTK say something about Dall's, esp. spike.]]
+
 \begin{figure}
 \centering
 \includegraphics[width=\textwidth]{analyses/williamsplots.eps}
-\caption{Plots of the detection functions fit to the Williams and Thomas (2007) data.}
+\caption{Plots of the detection functions fit to the Williams and Thomas (2007) data. In each case the best model by AIC was a 2-point mixture.}
 \label{williams-detfcts}
 \end{figure}
-
 
 
 \subsection{Wood ants in the Abernethy forest}
@@ -426,14 +446,72 @@ line transects w. covars + spikes
 [[TKTKTK ants paper cite]] analyse data on two species of wood ant (\textit{Formica aquilonia} and \textit{Formica lugubris}) in the Abernethy Forest in Strathspey Scotland over the period of August--September 2003. The number of nests sighted was 150 out to a distance of 72.04m from the track line, although 45\% of the nest sightings lay within 4m of the line. As part of their analysis several different truncation distances were used and larger truncation distances led to large variance in the encounter rate estimates and hence in overall abundance estimates[[TKTKTK ants paper cite]]. This is due to the spike caused by the large number of detections close to the line.
 
 [[TKTKTK probably want to use the same binning here as in the paper]]
+[[\textbf{LEN}: can I get a copy of the paper?]]
+
+\begin{table}
+\caption{ANTS RESULTS. Truncation at 25m. Mixtures selected as best by AIC. [[\textbf{LEN}: can you find the KS $p$-values? Can you also run the missing models? These seem very different, did you use 25m truncation when you ran these? Bold indicates lowest AIC.]]}
+\centering
+\begin{tabular}{c c c c c c}
+Model & Covariates & AIC & $\hat{P_a}$ & $\% CV \hat{P_a}$ & K-S $p$\\
+\hline
+\hline
+Hn 2-pt & None & 754.61 & 0.183 & 16.2 & 0.96 \\
+Hn 2-pt & habitat & 751.27 & 0.188 & 0.3 & 0.97 \\ 
+Hn 2-pt & species & 756.59 & 0.184 & 0.1 & 0.94 \\  
+Hn 2-pt & nest size & 741.64 & 0.214 & 10.9 & 0.76 \\   
+Hn 2-pt & species+habitat & 749.0516 & 0.0272 & 38.7 & 0.94\\ 
+Hn 2-pt & nest.size+habitat & \textbf{737.27} & 0.179 & 13.6 & 0.72\\
+Hn 2-pt & nest.size+species & 741.92 & 0.210 & 10.9 & 0.77\\
+Hn 2-pt & nest.size+species+habitat & 739.77 & 0.191 & 12.9 & 0.68 \\
+\end{tabular}
+\label{ants-table}
+\end{table}
+
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{analyses/ants-nesthab.eps}
+\caption{Plot of the detection functions for the AIC best model for the ants data set (2-point mixture with nest size and habitat as covariates). The first panel shows the average detection function (dashed lines are the two mixture components of the detection function, averaged over covariate values). The second and third panels show the quantiles (25\%, 50\% and 75\%) of nest size and the levels of habitat type respectively.}
+\label{ants-nesthab}
+\end{figure}
+
+
+
 
 \subsection{Long-finned pilot whales}
 line transects w. covars
 
-\subsection{Amakihi}
-point transects w. covars
+Pike \textit{et al} (2003) analyse data on long-finned pilot whales (\textit{Globicephala melas}). There were 84 pods sighted as part of the NASS-2001 survey (of which the pilot whale was not a target). The Beaufort sea state was recorded as a covariate during the survey and enter the model as either a 4 level factor (\texttt{BSS}), a 3 level factor (\texttt{BSS3}) or a 2 levels factor (\texttt{BSS2}).
 
-[[Big results table here comparing the results from the relevant papers and what we got]]
+A model was fit with each of these covariates, as well as a model with no covariates. A summary of the results is given in table \ref{pilot-table} and the detection function for the best model is shown in figure [[TKTKTK whale detfct plot]].
+\begin{table}
+\caption{PILOT WHALE RESULTS. (P) indicates results from Pike et al. (2003). [[TKTKTK results from Distance.]] Truncation at 3000m. Bold indicates the model with the lowest AIC.}
+\centering
+\begin{tabular}{c c c c c c}
+Model & Covariate & AIC & $\hat{P_a}$ & $\% CV \hat{P_a}$ & K-S $p$\\
+\hline
+\hline
+2-point & None & 1298.42 & 0.295 & 23.6 & 0.9471 \\
+2-point & \texttt{BSS} & 1286.6 & 0.209 & 8.54 & 0.8196 \\
+2-point & \texttt{BSS2} & \textbf{1284.99} & 0.211 & 8.5 & 0.9533\\
+2-point & \texttt{BSS3} & 1296.27 & 0.2698 & 4.88 & 0.9864 \\
+\end{tabular}
+\label{pilot-table}
+\end{table}
+
+The best model by AIC score was  the \texttt{BSS2} model. A plot of the average detection function... [[TKTKTK plot]]
+
+
+\subsection{Amakihi}
+Marques \textit{et al} (2007) analyse data on the Hawaii Amakihi (\textit{Hemignathus virens}). The data consist of 1485 observations on the bird, collected at 41 point transect from July 1992 to April 1995. Covariate data was also collected:
+\begin{itemize}
+	\item \texttt{obs} - the person who made the observations (three level factor),
+	\item \texttt{mas} - minutes after sunrise (continuous),
+	\item \texttt{has} - hours after sunrise (factor).
+\end{itemize}
+Given that this is a large data set, it may well support the incorporation of 2 or more of the covariates above.
+
+[[Big results table here comparing the results from the relevant papers and what we got?? A la Morgan \& Ridout?]]
 
 
 
@@ -442,7 +520,6 @@ point transects w. covars
 \label{s:discuss}
 
 Package on CRAN
-
 Has usual methods
 
 Will be in next version of Distance?!
@@ -534,9 +611,10 @@ Every $\sigma_{j}$ is a function of the $\beta_{k}$s, so:
 &= z_{ik*}\sigma_{j}.
 \end{align*}
 Hence:
-\begin{equation*}
- \frac{\partial}{\partial \beta_{k*}} \exp\Big( -\frac{x^2}{2\sigma_{j}^2} \Big) = z_{k*} \Big( \frac{x}{\sigma_{j}}\Big)^2 \exp \Big(-\frac{x^2}{2 \sigma_{j}^2}\Big) 
-\end{equation*}
+\begin{equation}
+ \frac{\partial}{\partial \beta_{k*}} \exp\Big( -\frac{x_i^2}{2\sigma_{j}^2} \Big) = z_{k*} \Big( \frac{x_i}{\sigma_{j}}\Big)^2 \exp \Big(-\frac{x_i^2}{2 \sigma_{j}^2}\Big) = z_{k*} \Big( \frac{x_i}{\sigma_{j}}\Big)^2 g_j(x_i,\mathbf{Z}; \bm{\theta}_j).
+ \label{detfct-deriv-k}
+\end{equation}
 And so for the $\mu_{ij}$s:
 \begin{equation*}
 \frac{\partial \mu_{ij}}{\partial \beta_{k*}} = z_{ik*} \Big( \mu_{ij} - w \exp\Big( -\frac{w^2}{2\sigma_{j}^2} \Big) \Big)
@@ -601,48 +679,60 @@ Starting with the likelihood in (\ref{pt-lik}), one can see that we obtain:
 \end{align*}
 the first part of which (the derivatives of the detection function) are as in the line transect case. The derivatives of $\nu_{ij}$ are simpler in the point transect case, since there is an easy analytic expression for $\nu_{ij}$ when $g_j$ is half-normal :
 \begin{equation*}
-\nu_{ij} = 2 \pi \sigma_{ij} (1-\exp (-w^2/2\sigma_{ij} )
+\nu_{ij} = 2 \pi \sigma_{ij}^2 (1-\exp (-w^2/2\sigma_{ij}^2 ))
 \end{equation*}
 then simply applying the product rule yields:
 \begin{equation*}
-\frac{\partial \nu_{ij}}{\partial \beta_{0j*}} = 2 \pi (2 \sigma_{ij*} + g_{j*}(w) \Big(\frac{w^2}{\sigma_{ij*}} - 2\sigma_{ij*}\Big)).
+\frac{\partial \nu_{ij}}{\partial \beta_{0j*}} = 2 (\nu_{ij*} + \pi w^2 g_{j*}(w)).
 \end{equation*}
 Substituting this into the above expression:
 \begin{equation*}
-\frac{\partial l(\bm{\theta}, \bm{\phi}; \mathbf{r},\mathbf{Z})}{\partial \beta_{0j*}}  = \sum_{i=1}^n \Big( \frac{ \phi_{j*} (r_i/\sigma_{j*})^2 g_{j*}(r_i,\mathbf{Z}; \bm{\theta}_{j*})}{g(r_i,\mathbf{Z}; \bm{\theta}, \bm{\phi})} - \frac{ \phi_{j*} 2 \pi (2 \sigma_{ij} + g_{j*}(w,\mathbf{Z}; \bm{\theta}_{j*}) (w^2/\sigma_{ij*} - 2\sigma_{ij*})) }{ \sum_{j=1}^J \phi_j \nu_{ij}}\Big)
+\frac{\partial l(\bm{\theta}, \bm{\phi}; \mathbf{r},\mathbf{Z})}{\partial \beta_{0j*}}  = \sum_{i=1}^n \Big( \frac{ \phi_{j*} (r_i/\sigma_{j*})^2 g_{j*}(r_i,\mathbf{Z}; \bm{\theta}_{j*})}{g(r_i,\mathbf{Z}; \bm{\theta}, \bm{\phi})} - \frac{ \phi_{j*} 2 (\nu_{j*} + \pi w g_{j*}(w)) }{ \sum_{j=1}^J \phi_j \nu_{ij}}\Big)
 \end{equation*}
 
-\subsection{With respect to $\beta_{k*}$}
+\subsubsection{With respect to $\beta_{k*}$}
 
-TKTKTK
-
+Again working from (\ref{pt-lik}), we obtain:
 \begin{align*}
-\frac{\partial l(\bm{\theta}, \bm{\phi}; \mathbf{r},\mathbf{Z})}{\partial \beta_{0j*}}  &= \sum_{i=1}^n \Big( \frac{\partial}{\partial \beta_{0j*}} \log \sum_{j=1}^J \phi_j g_j(r_i,\mathbf{Z}; \bm{\theta}_j) - \frac{\partial}{\partial \beta_{0j*}}\log \sum_{j=1}^J \phi_j \nu_{ij}\Big)\\
-&= \sum_{i=1}^n \Big( \frac{ \sum_{j=1}^J \phi_{j} \frac{\partial}{\partial \beta_{0j*}}  g_{j} (r_i,\mathbf{Z}; \bm{\theta}_j)}{g(r_i,\mathbf{Z}; \bm{\theta}, \bm{\phi})} - \frac{ \sum_{j=1}^J \phi_{j}\frac{\partial}{\partial \beta_{0j*}}  \nu_{ij} }{ \sum_{j=1}^J \phi_j \nu_{ij}}\Big)
+\frac{\partial l(\bm{\theta}, \bm{\phi}; \mathbf{r},\mathbf{Z})}{\partial \beta_{k*}}  &= \sum_{i=1}^n \Big( \frac{\partial}{\partial \beta_{k*}} \log \sum_{j=1}^J \phi_j g_j(r_i,\mathbf{Z}; \bm{\theta}_j) - \frac{\partial}{\partial \beta_{k*}}\log \sum_{j=1}^J \phi_j \nu_{ij}\Big)\\
+&= \sum_{i=1}^n \Big( \frac{ \sum_{j=1}^J \phi_{j} \frac{\partial}{\partial \beta_{k*}}  g_{j} (r_i,\mathbf{Z}; \bm{\theta}_j)}{g(r_i,\mathbf{Z}; \bm{\theta}, \bm{\phi})} - \frac{ \sum_{j=1}^J \phi_{j}\frac{\partial}{\partial \beta_{k*}}  \nu_{ij} }{ \sum_{j=1}^J \phi_j \nu_{ij}}\Big)
 \end{align*}
+The derivatives of $g_j$ are as in (\ref{detfct-deriv-k}). For $\nu_{ij}$:
+\begin{equation*}
+\frac{\partial \nu_{ij}}{\partial \beta_{k*}} =  2z_{ik*}(\nu_{ij} - \pi w^2 g_j(w))
+\end{equation*}
+Putting that together:
+\begin{equation*}
+\frac{\partial l(\bm{\theta}, \bm{\phi}; \mathbf{r},\mathbf{Z})}{\partial \beta_{k*}}  = \sum_{i=1}^n \Big( \frac{ \sum_{j=1}^J \phi_{j} z_{k*} \Big( \frac{x_i}{\sigma_{j}}\Big)^2 g_j(x_i,\mathbf{Z}; \bm{\theta}_j)}{g(r_i,\mathbf{Z}; \bm{\theta}, \bm{\phi})} - \frac{ \sum_{j=1}^J \phi_{j}2z_{ik*}(\nu_{ij} - \pi w^2 g_j(w)) }{ \sum_{j=1}^J \phi_j \nu_{ij}}\Big)
+\end{equation*}
+
 
 
 \section{Appendix B - rejection sampling for simulation of mixture detection function distance data}
 
-We generate $n$ samples by sampling distances $X\sim \text{Uniform}(0,w)$ distribution. We want $X$ to come from the PDF of the distances, $f$. We know that in the line transect case that the maximum value of $f$ is $1/\mu$ (since $\mu=1/f(0)$ and f(0) is the maximum of $f$). So we can then set
-\begin{equation}
-M \geq \frac{1}{\mu},
-\end{equation}
-so finding $h(x)$,
-\begin{align*}
-h(x) &= \frac{f(x)}{U(x) M}\\
-&= \frac{g(x)/\mu}{(1/w) (1/\mu)}\\
-&= \frac{\sum_{j=1}^J \phi_j g_j(x)/\mu}{(1/w) (1/\mu)}\\
-&= w \sum_{j=1}^J \phi_j g_j(x)
-\end{align*}
+\textbf{LEN}: do we need a reference for rejection sampling?
 
+We generate $n$ samples by sampling distances $X\sim \text{Uniform}(0,w)$. We want $X$ to come from the PDF of the distances, $f$. We know that in the line transect case that the maximum value of $f$ is $1/\mu$ (since $\mu=1/f(0)$ and f(0) is the maximum of $f$). So we can then set
+\begin{equation*}
+M \geq \frac{1}{\mu},
+\end{equation*}
+so finding $h(x)$, and letting $U(x)$ denote a $\text{Uniform}(0,w)$ pdf:
+\begin{align*}
+h(x) &= \frac{f(x,z; \bm{\theta}, \bm{\phi})}{U(x) M}\\
+&= \frac{g(x,z; \bm{\theta}, \bm{\phi})/\mu}{(1/w) (1/\mu)}\\
+&= w g(x,z; \bm{\theta}, \bm{\phi})
+\end{align*}
 then, generating a $U \sim \text{Uniform}(0,1)$ accept $X$ if 
 \begin{equation}
-U \leq wg(X,z_i; \bm{\theta}, \bm{\phi}).
+U \leq wg(X,z; \bm{\theta}, \bm{\phi}).
 \end{equation}
-where $z_i$ indicates the covariates that are to be used for generated observation $i$.
+where $z$ indicates the covariates that are to be used for generating the observation.
 
-MORE HERE
+For point transects the maximum value is unknown, so for each simulation the maximum value of $f$ was found using the \textsf{R} function \texttt{optimize()}. This was then used for the value of $M$. If we generate $R \sim \text{Uniform(0,w)}$, the distance is accepted if:
+\begin{equation}
+U \leq \frac{wr}{M\nu}g(R,z; \bm{\theta}, \bm{\phi}).
+\end{equation}
+
 
 %  Here, we create the bibliographic entries manually, following the
 %  journal style.  If you use this method or use natbib, PLEASE PAY
@@ -661,28 +751,36 @@ MORE HERE
 
 Bibiolography - TKTKTK
 
-Buckland et al 2001
-
 Buckland 1992
 
 ants paper
 
-Pledger
-
 Dorazio and Royle
 
-Morgan and Ridout
 
 
 \begin{thebibliography}{}
 
+\bibitem{ } Beavers, S. C., and Ramsey, F. L. (1998). Detectability analysis in transect surveys. \textit{Journal of Wildlife Management} \textbf{62}(3), pp. 948Ð957.
+
+\bibitem{ }  Buckland, S. T., Anderson, D. R., Burnham, K. P., Laake, J. L., Borchers, D. L., and Thomas, L.  (2001). \textit{Distance Sampling}. Oxford University Press. Oxford, UK.
+
 \bibitem{ }  Buckland, S. T., Anderson, D. R., Burnham, K. P., Laake, J. L., Borchers, D. L., and Thomas, L.  (2004). \textit{Advanced Distance Sampling}. Oxford University Press. Oxford, UK.
 
+\bibitem{ }  Gelman, A., Carlin, J. B., Stern, H. S., and Rubin, D. B. (2004). \textit{Bayesian Data Analysis}. CRC Press. Boca Ranton, Florida, US.
+
 \bibitem{ } Marques, T. A., Thomas, L., Fancy, S. G., Buckland, S. T. (2007). Improving estimates of bird density using multiple-covariate distance sampling. \textit{The Auk} \textbf{124}(9), pp. 1229--1243.
+
+\bibitem{ } Morgan, B. J. T. and M. Ridout (2008). A new mixture model for capture heterogeneity. \textit{Journal of the Royal Statistical Society: Series C} \textbf{57}(4), 433Ð446. 
+
+\bibitem{ } Pledger, S. (2000). Unified maximum likelihood estimates for closed capture-recapture models using mixtures. \textit{Biometrics} \textbf{56}(2), 434Ð442. 
+
+\bibitem{ } Pledger, S. (2005). The performance of mixture models in heterogeneous closed population capture-recapture. \textit{Biometrics} \textbf{61}(3), 868Ð873.
 
 \bibitem{ } Williams, R. and Thomas, L. (2007). Distribution and abundance of marine mammals in the coastal waters of British Columbia, Canada. \textit{Journal of Cetacean Research and Management} \textbf{9}(1), pp. 15--38.
 
 \bibitem{ } Pike, D. G., Gunnlaugsson, T., V\'{i}kingsson, G .A., Desportes, G. and Mikkelson, B.  (2003) An estimate of the abundance of long-finned pilot whales (\textit{globicephala melas}) from the NASS-2001 shipboard survey. Paper SC/11/AE/10 presented to the North Atlantic Marine Mammal Commission (NAMMCO) Scientific Committee Working Group on Abundance Estimates.
+
 
 
 
